fix alignment issue

--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ body{
 
 
 
-.loginBox{
-    height: max-content;margin: 500px;text-align: center;
+.loginBox{ 
+    margin: 20%;
+    text-align: center;
     margin-top: 100px;
 }
 
